新版本前端

--- a/front_end_server/assets/clinical-analytics.css
+++ b/front_end_server/assets/clinical-analytics.css
@@ -1,12 +1,12 @@
 :root {
-    --c1: #FAF1E6;	/* color1 */
-    --bg: #FDFAF6;	/* backgound color */
-    --bg2: #E4EFE7;	/* background color 2 */
-    --text: #064420;	/* text color */
-    --borderline: #2C8CFF;	/* blue color */
-    --font-size: 1.6rem;	/* font size */
-    --font: 'Arial';	/* font type */
-    --font2: 'Arial';	/* font type */    
+    --c1: #FAF1E6; /* color1 */
+    --bg: #FDFAF6; /* backgound color */
+    --bg2: #E4EFE7; /* background color 2 */
+    --text: #064420; /* text color */
+    --borderline: #2C8CFF; /* blue color */
+    --font-size: 1.6rem; /* font size */
+    --font: 'Arial'; /* font type */
+    --font2: 'Arial'; /* font type */
 }
 
 @font-face {
@@ -146,7 +146,7 @@ H5, H3 {
     width: 100%;
 }
 
-#patient_volume_card, #wait_time_card, #input_relation_card, #seed_entity_card, #result_card {
+#patient_volume_card, #wait_time_card, #select_example_card, #input_relation_card, #seed_entity_card, #result_card {
     font-family: var(--font);
     color: var(--text);
     background-color: var(--bg);
@@ -155,7 +155,7 @@ H5, H3 {
     margin-top: 20px;
 }
 
-#patient_volume_card > b, #wait_time_card > b, #input_relation_card > b, #seed_entity_card > b, #result_card > b {
+#patient_volume_card > b, #wait_time_card > b, #select_example_card > b, #input_relation_card > b, #seed_entity_card > b, #result_card > b {
     line-height: 1.5;
 
 }
